[package]
name = "toy_rsa"
version = "0.1.0"
authors = ["cemondr <yco@pdx.edu>"]
edition = "2018"

[lib]
name = "toy_rsa"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toy_rsa_lib = {git = "http://github.com/pdx-cs-rust/toy-rsa-lib"}